platform/ingress/base/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: vote
  labels:
    environment: dev
spec:
  ingressClassName: nginx
  rules:
  - host: result.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-svc
            port:
              number: 80
